# Deep_learning1

./: .buildinfo  .gitignore  README.md  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: intro.md
_sources/docs/: 01_project_overview_and_eda.ipynb  01_project_overview_and_eda3.ipynb  02_sklearn_mlp_pipeline.ipynb  02_sklearn_mlp_pipeline2.ipynb  03_pyspark_mlp_pipeline.ipynb  03_pyspark_mlp_pipeline2.ipynb  04_lime_and_framework_comparison.ipynb  04_lime_and_framework_comparison2.ipynb
book/: _config.yml  _toc.yml  intro.md
book/docs/: 01_project_overview_and_eda.ipynb  02_sklearn_mlp_pipeline.ipynb  03_pyspark_mlp_pipeline.ipynb  04_lime_and_framework_comparison.ipynb
configs/: project_settings.toml
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: 01_project_overview_and_eda.html  01_project_overview_and_eda3.html  02_sklearn_mlp_pipeline.html  02_sklearn_mlp_pipeline2.html  03_pyspark_mlp_pipeline.html  03_pyspark_mlp_pipeline2.html  04_lime_and_framework_comparison.html  04_lime_and_framework_comparison2.html
models/: .gitkeep
reports/figures/: .gitkeep
src/ctr_mlp/: __init__.py  config.py  data_io.py  eda.py  evaluation.py  explainability.py  feature_engineering.py  sklearn_workflow.py  spark_workflow.py  utils.py
