[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avazu-ctr-mlp"
version = "0.1.0"
description = "University mini-project comparing scikit-learn and PySpark MLP pipelines for click-through-rate classification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "pyspark>=3.5",
  "lime>=0.2.0.1",
  "pyarrow>=15.0",
  "jupyterlab>=4.2",
  "notebook>=7.2",
  "jupyter-book>=1.0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
